# restgui

./: README.md  restgui.cabal
src/: Calculator.hs  Guiserver.hs  Main.hs  Operationserver.hs
